# oraclemind

./: .atex_api_key  .gitignore  AGENTS.md  IDENTITY.md  LICENSE  README.md  SOUL.md  TOOLS.md  USER.md  aishield_prompt_firewall.py  api-registry.json  api_server.py  api_server_v2.py  api_server_v3.py  build_nist_data.py  decode_server.py  deploy_pull.py  deploy_step1.py  docs.html  douyin_api_upload.js  douyin_auto_upload.js  douyin_auto_upload2.js  douyin_auto_upload3.js  douyin_auto_upload4.js  douyin_auto_upload5.js  douyin_check_publish.js  douyin_debug.js  douyin_fast.js  douyin_fast_login.js  douyin_final.js  douyin_final_v2.js  douyin_full_publish.js  douyin_headed.js  douyin_heartbeat.js  douyin_instant.js  douyin_logged_in_state.json  douyin_login.js  douyin_login2.js  douyin_login_flow.js  douyin_one_shot.js  (+342 more)
.clawhub/: lock.json
agents/: README.md  README_AUTO.md  agent_capabilities.json  auto_enhance.py  cron_monitor.py  eve.py  eve_enhanced.py  eve_patch.py  eve_workflow.md  eve_workflow_v2.md  intel_board.json  run_daily.py  server.py  sync_xiaowu_data.py  xiaowu_sync_state.json
aishield/: .dockerignore  Dockerfile  aishield.service  aishield.sh  templates
aishield/distrib/public-repo/sdk/python/: README.md  pyproject.toml
aishield/distrib/public-repo/sdk/python/aishield/: __init__.py
atex/: diagnostic-report.md  fusion-plan.md
atex-demo/: index.html
atex-marketing/: ATEX-宣传口径与操作指南.md  ATEX快速上手指南.md  Reddit-MCP-post.md  V2EX技术帖.md  即刻帖子.md  小红书图文.md  抖音短视频脚本.md
atex-mcp-server-public/: README.md
backup/: genetech-list.txt  secrets-summary.md  全局配置_IDENTITY.md  全局配置_SOUL.md  密码与密钥汇总.txt
bees/: colony.py  compute_engines.py  db_connectors.py
browser_data7/: Local State  SingletonCookie  SingletonLock  SingletonSocket
browser_data8/: Local State  SingletonCookie  SingletonLock  SingletonSocket
core/: acceleration_loop.py
dashboard/: dashboard.py
data/: acceleration_history.json  invite_codes.json  sessions.json  users.json
docs/: Agent团队体系设计文档_v1.0.md  README.md  cf-bot-fight-config.md  index.html
fused-platform/: Dockerfile  atex.py  docker-compose.yml  env.sh  job_market.py  package.json  server.json  (+2 more)
projects-review/swarm-research/swarm-backup/remote-code/sdk/: README.md  pyproject.toml
projects-review/swarm-research/swarm-backup/remote-code/sdk/examples/: 01_full_pipeline.py  02_knowledge_cite.py  03_skill_format.py
projects-review/swarm-research/swarm-backup/remote-code/sdk/swarm_sdk/: __init__.py  client.py
(+4770 files in other folders)
