[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-sdk"
version = "0.1.0"
description = "蜂群科研平台 Python SDK — AI科研验证平台"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "蜂群科研", email = "team@swarm-research.cn"}
]
keywords = ["research", "chemistry", "rdkit", "AI", "drug-discovery", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/lm203688/swarm-sdk"
Documentation = "https://github.com/lm203688/swarm-sdk#readme"

[tool.setuptools.packages.find]
where = ["."]
